--- a/2_deploy_fortigates/modules/dual_hub_tgw/sub_modules/fgt_config/templates/aws_tgw_gre.conf
+++ b/2_deploy_fortigates/modules/dual_hub_tgw/sub_modules/fgt_config/templates/aws_tgw_gre.conf
@@ -40,6 +40,9 @@ set route-map-in ${route_map_in}
 %{ if route_map_out != "" }
 set route-map-out ${route_map_out}
 %{ endif }
+%{ if default_originate }
+set capability-default-originate enable
+%{ endif }
 next
 end
 end
