--- a/2_deploy_fortigates/modules/dual_hub_tgw/sub_modules/fgt_config/templates/fgt_vxlan.conf
+++ b/2_deploy_fortigates/modules/dual_hub_tgw/sub_modules/fgt_config/templates/fgt_vxlan.conf
@@ -14,6 +14,7 @@ end
 config system interface
 edit "vxlan-${vxlan_port}-${count}"
 set ip ${local_ip} 255.255.255.0
+set allowaccess ping
 next
 end
 %{ endif }
