--- a/2_deploy_fortigates/modules/user_fgt/sub_modules/aws_fgt_config/templates/fgt-all.conf
+++ b/2_deploy_fortigates/modules/user_fgt/sub_modules/aws_fgt_config/templates/fgt-all.conf
@@ -52,6 +52,12 @@ set hostname ${fgt_id}
 set admin-sport ${admin_port}
 end
 
+config system settings
+set sip-expectation disable
+set h323-direct-model disable
+set gui-multiple-interface-policy enable
+end
+
 %{ if rsa-public-key != null }
 config system admin
 edit ${adminusername}
@@ -103,30 +109,6 @@ edit 0
 set device ${private_port}
 set gateway ${private_gw}
 set priority 10
-next
-end
-
-config firewall policy
-edit 0
-set name "E-W-traffic"
-set srcintf ${private_port}
-set dstintf ${private_port}
-set srcaddr "all"
-set dstaddr "all"
-set action accept
-set schedule "always"
-set service "ALL"
-next
-edit 0
-set name "S-N-traffic"
-set srcintf ${private_port}
-set dstintf ${public_port}
-set srcaddr "all"
-set dstaddr "all"
-set action accept
-set schedule "always"
-set service "ALL"
-set nat enable
 next
 end
 
