--- a/2_deploy_fortigates/modules/user_fgt/templates/fgt_config_student.conf
+++ b/2_deploy_fortigates/modules/user_fgt/templates/fgt_config_student.conf
@@ -14,9 +14,28 @@ next
 edit "h-lab-server"
 set subnet ${lab_server_ip} 255.255.255.255
 next
+edit "h-10.0.0.0/8"
+set subnet 10.0.0.0 255.0.0.0
+next
 end
 
 config firewall policy
+edit 0
+set name "allow-traffic-to-internet"
+set srcintf "${private_port}"
+set dstintf "${public_port}"
+set action accept
+set srcaddr "all"
+set dstaddr "all"
+set schedule "always"
+set service "ALL"
+set utm-status enable
+set ssl-ssh-profile "certificate-inspection"
+set ips-sensor "default"
+set application-list "default"
+set logtraffic all
+set nat enable
+next
 edit 0
 set name "allow-lab-server-health-check"
 set srcintf "any"
@@ -33,12 +52,12 @@ set application-list "default"
 set logtraffic all
 next
 edit 0
-set name "allow-server-traffic"
+set name "allow-server-to-SDWAN"
 set srcintf "${private_port}"
 set dstintf "any"
 set action accept
 set srcaddr "h-sdn-student-server"
-set dstaddr "all"
+set dstaddr "h-10.0.0.0/8"
 set schedule "always"
 set service "ALL"
 set utm-status enable
@@ -46,21 +65,5 @@ set ssl-ssh-profile "certificate-inspection"
 set ips-sensor "default"
 set application-list "default"
 set logtraffic all
-next
-edit 0
-set name "allow-traffic-to-internet"
-set srcintf "${private_port}"
-set dstintf "${public_port}"
-set action accept
-set srcaddr "all"
-set dstaddr "all"
-set schedule "always"
-set service "ALL"
-set utm-status enable
-set ssl-ssh-profile "certificate-inspection"
-set ips-sensor "default"
-set application-list "default"
-set logtraffic all
-set nat enable
 next
 end
