--- a/3_deploy_servers/templates/docker-compose.yaml
+++ b/3_deploy_servers/templates/docker-compose.yaml
@@ -46,7 +46,7 @@ services:
     networks:
       - frontweb
   checkscript:
-    image: jviguerasfortinet/xpertsummit22:python-xs22
+    image: jviguerasfortinet/hol-checkscript:v1
     container_name: checkscript
     restart: always
     environment:
@@ -56,6 +56,7 @@ services:
       DBTABLE: '${db_table}'
       DBPORT: '${db_port}'
       DBPASS: '${db_pass}'
+      APP_PORT: '${app_port}'
     depends_on:
       - db
     networks:
